--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -8,20 +8,21 @@
             <div class="row">
                 <div class="col-md-8 col-sm-8">
                     <p>
-                        Emma Hammar och Cecilia Holmgren startade den ideella organisationen Kompisbyrån 2014 för
-                        att öka gemenskapen i samhället genom att skapa möten mellan nya kompisar i vardagen. 
-                        Kompisbyrån länkar digitalt samman nya kompisar med olika bakgrund, erfarenhet och kultur 
-                        men med liknande intressen. De träffas över en fika, en kompisfika. Idag har tusentals 
-                        fikakompisar lärt känna varandra över en kompisfika. Flera fikor har lett till jobb, 
-                        många har lett till vänskap. Kompisbyrån är partipolitiskt och religiöst obunden.
-                        Vi länkar samman nya kompisar som kan träffas i Göteborg, Jönköping, Linköping, Malmö, 
-                        Stockholm, Umeå, Uppsala, Västerås eller Örebro.
+                        Kompisbyrån är en ideell organisation som digitalt skapar kontakt mellan nya och etablerade 
+                        svenskar med liknande intressen. Kompisbyrån startades 2014 av Emma Hammar och Cecilia Holmgren 
+                        med en vision om att öka gemenskapen i samhället genom att förenkla förutsättningar till fler 
+                        vardagsmöten mellan människor med olika bakgrund, erfarenhet och kultur. Syftet är att prata 
+                        svenska under 1 timmes fika. Det är det vi kallar för en kompisfika. 
                     </p>
-                    <h3>Varför kompisfika?</h3>
                     <p>
-                        En fika är något som av många ses som centralt i svensk kultur och är associerat med 
-                        något lättsamt, avslappnat och roligt. Därför tycker vi att det är väldigt passande att 
-                        träffas och öva svenska över just en fika.
+                        Möjliggör vi tillräckligt många möten får nyetablerade svenskar bättre svenskkunskaper, breddat 
+                        socialt nätverk och ökade möjligheter till jobb. Fler vardagsmöten leder också till en ökad 
+                        förståelse för varandra och en berikande tillvaro. För att nämna en bråkdel. 
+                    </p>
+                    <p>
+                        “En fika är något som av många ses som centralt i svensk kultur och är associerat med något
+                        lättsamt, avslappnat och roligt. Därför tycker vi att det är väldigt passande att träffas och 
+                        öva svenska över just en fika.” - Emma Hammar och Cecilia Holmgren, grundare av Kompisbyrån  
                     </p>
                     <img src="/images/Kompis2.JPG" class="img-responsive" alt="Vi som jobbar med Kompisbyrån" />
                 </div>
