--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -8,42 +8,38 @@
         <div class="row">
             <div class="col-md-8 col-sm-8">
                 <p>
-                    Kompisbyrån länkar digitalt samman fikakompisar med gemensamma intressen som träffas över en fika,
-                    en kompisfika, och pratar svenska. Vi vill göra det enklare för fler människor med olika bakgrund, 
-                    erfarenhet och kultur men med liknande intressen, att mötas och lära känna nya kompisar i vardagen.
-                    Idag har tusentals fikakompisar från 79 länder lärt känna varandra över kompisfikor. Flera fikor har 
-                    lett till jobb. Många har lett till vänskap. Träffa nya kompisar som du annars kanske inte skulle ha 
-                    mött - bli en Fikakompis!
+                    Kompisbyrån skapar kontakt mellan två nya fikakompisar med liknande intressen. Syftet är att prata svenska över 
+                    en fika. En person är ny i Sverige och en person har bott i Sverige länge. Ni träffas på ett kafé i cirka 1 
+                    timme och pratar svenska. Det är det vi kallar för en “kompisfika”. Om ni tycker det är roligt får ni gärna 
+                    ses igen på egen hand. Om inte, gör inte det något för timmen har ändå uppfyllt sitt syfte. 
                 </p>
+                <p>
+                    Vi utgår från varje person, så det är du som bestämmer om du definierar dig som ny eller etablerad. Som ny 
+                    i Sverige vill du lära dig prata bättre svenska, det spelar ingen roll hur lång eller kort tid du har bott i 
+                    Sverige. Som etablerad i Sverige har du svenska som modersmål eller motsvarande, och kan lära ut svenska. 
+                </p>    
                 <p>
                     Så här går det till:
                 </p>
                 <p>    
-                    1. Registrera dig som fikakompis genom att trycka på "Bli Fikakompis"-knappen. Det är gratis att registrera sig.  
+                    1. Du registrerar dig. Tryck på "Bli Fikakompis"-knappen och följ instruktionerna, det är gratis att registrera sig. 
+                    Du måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.  
                 </p>
                 <p>
-                    2. Vi hittar en fikakompis till dig som har liknande intressen som du har. Vi mailar dig fikakompisens e-mail. 
+                    2. Matchning. Vi skickar ett email till dig när vi har hittat en fikakompis som har liknande intressen som du har. 
                 </p>
                 <p>
-                    3. Du mailar din fikakompis och bestämmer vilken dag, tid och plats ni ska träffas. Vi rekommenderar att ni 
-                    träffas i ungefär 1 timme på ett kafé. 
+                    3. Bestäm ett datum. Du skickar ett email till din fikakompis inom 7 dagar och bestämmer datum, tid och plats. 
                 </p>
                 <p>
-                    En kompisfika med samma person sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du 
-                    träffa en ny person, loggar du in med din e-mail och ditt lösenord, och gör en ny förfrågan.
+                    4. Mötet. Ni träffas för att prata svenska på ett kafé eller annat offentligt ställe i cirka 1 timme. 
                 </p>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="well br-white border-orange black">
                     <p>
-                         En kompisfika med samma person sker en gång, om ni inte kommer överens om att ses igen. 
-                         Vill du träffa en ny person, loggar du in och gör en ny förfrågan. 
-                    </p>
-                </div>
-                <div class="well br-white border-orange black">
-                    <p>
-                        Alla deltagare ska kunna träffas i centrala delen av någon av följande städer: Göteborg, Jönköping, 
-                        Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro (om ni inte kommer överens om annat).
+                        Vi förmedlar första kontakten till en fikakompis som du träffar 1 gång (om ni inte kommer överens om annat). 
+                        Vill du träffa en ny fikakompis, loggar du in och gör en ny förfrågan. 
                     </p>
                 </div>
             </div>
