--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -14,9 +14,9 @@
                     ses igen på egen hand. Om inte, gör inte det något för timmen har ändå uppfyllt sitt syfte. 
                 </p>
                 <p>
-                    Vi utgår från varje person, så det är du som bestämmer om du definierar dig som ny eller etablerad. Som ny 
-                    i Sverige vill du lära dig prata bättre svenska, det spelar ingen roll hur lång eller kort tid du har bott i 
-                    Sverige. Som etablerad i Sverige har du svenska som modersmål eller motsvarande, och kan lära ut svenska. 
+                    Vi utgår från varje person, så det är du som bestämmer om du definierar dig som ny eller etablerad. <strong>Som ny 
+                    i Sverige</strong> vill du lära dig prata bättre svenska, det spelar ingen roll hur lång eller kort tid du har bott i 
+                    Sverige. Som <strong>etablerad i Sverige</strong> har du svenska som modersmål eller motsvarande, och kan lära ut svenska. 
                 </p>    
                 <p>
                     Så här går det till:
