--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -10,26 +10,31 @@
                 <h2><strong>Stöd oss</strong></h2>
                 <h3>Stöd oss!</h3>
                 <p>
-                    Vill du som privatperson, företag, kommun eller annan organisation, stötta en förening som hjälper tusentals 
-                    människor att få ett socialt sammanhang i samhället? På Kompisbyrån jobbar vi aktivt för att skapa nya 
-                    kontaktytor mellan nya och etablerade svenskar och ge fler chansen att öva svenska i vardagen. Då blir det 
-                    mycket lättare att komma in på arbetsmarknaden, få en egen bostad och hitta nya kompisar. Stöd oss till ett 
-                    öppnare samhälle där alla kan känna sig delaktiga och välkomna. 
+                    Vill du som privatperson, företag, kommun eller annan organisation, samarbeta med Kompisbyrån? Idag har 
+                    tusentals fikakompisar från över 79 länder lärt känna varandra över en kompisfika. Många möten har lett 
+                    till etablering på arbetsmarknaden. Andra till en egen bostad. Och framförallt, har det lett till vänskap 
+                    som förenar olika länder, kultur, ålder, språk och erfarenheter. 
+                </p>
+                <p>
+                    Vi är helt finansierade genom samarbeten så det är genom dem som vi kan hjälpa alla tusentals människor 
+                    som vill skapa ett socialt sammanhang i samhället. Följ med oss på vår resa till ett öppnare samhälle 
+                    där alla kan känna sig delaktiga och välkomna. 
                 </p>
                 <p> 
-                    <strong>Din gåva hjälper oss att länka samman fler nya fikakompisar, ge ditt bidrag på valfritt belopp:</strong>
+                    <strong>Din gåva är väldigt värdefull för oss, oavsett hur mycket eller lite du väljer att skänka:</strong>
                 </p>
                 <p> 
                     <strong>Kompisbyråns Swishnr: 1236 809 602 eller BG-konto 386-3982</strong>
                 </p>
                 <p> 
-                    Vi vill gärna ge dig ett personligt gåvobevis. Maila till kontakt@kompisbyran.se, så mailar vi ditt gåvobevis. 
-                    Stort tack för att du vill vara med och göra skillnad.
+                    Vi vill gärna ge dig ett personligt gåvobevis som tack - maila kontakt@kompisbyran.se så skickar vi över det! 
                 </p>
                 <p>
-                    Vi berättar gärna mer om hur du kan stötta Kompisbyrån. Maila <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> 
-                    så berättar vi gärna mer!
+                    Vi berättar mer än gärna om hur du kan stötta Kompisbyrån på olika vis - kontakta emma@kompisbyran.se eller cecilia@kompisbyran.se. 
                 </p>
+                <p>
+                    Stort tack för att du vill vara med och göra skillnad.
+                </p>    
 
                 <h3>Tack till...</h3>
                 <p>
@@ -53,12 +58,6 @@
                     >Lernia</a> som stöttar Kompisbyråns arbete med att göra det enklare för människor med liknande intressen att 
                     mötas och träffa nya vänner i vardagen. I och med detta har vi möjlighet att nå ut till fler som 
                     vill träffa nya kompisar. 
-                </p>    
-                <p>
-                    <strong>Övriga samarbeten</strong>
-                </p>    
-                <p>
-                    Vi samarbetar med olika språkskolor där vi besöker klasser och berättar mer om oss.  
                 </p>
 
             </div>
