--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -6,9 +6,11 @@
     {% if wantToLearn %}
         {% set user = connection.learner %}
         {% set comment = connection.learnerComment %}
+        {% set date = connection.learnerConnectionRequestCreatedAt %}
     {% else %}
         {% set user = connection.fluentSpeaker %}
         {% set comment = connection.fluentSpeakerComment %}
+        {% set date = connection.fluentSpeakerConnectionRequestCreatedAt %}
     {% endif %}
     <strong><a
         href="{{ path('admin_user', {'id': user.id}) }}"
@@ -23,6 +25,7 @@
         data-want-to-learn="{{ wantToLearn ? 1 : 0 }}"
         data-music-friend="{{ connection.musicFriend ? 1 : 0 }}"
         data-city-id="{{ connection.city.id }}"
+        data-date="{{ date|date('Y-m-d H:i:s') }}"
     >Kompisfika igen</a>
 
     <div class="color: red" style="display: none">
@@ -116,7 +119,8 @@
                             wantToLearn: $(this).data('want-to-learn'),
                             cityId: $(this).data('city-id'),
                             sortOrder: 1,
-                            musicFriend: $(this).data('music-friend')
+                            musicFriend: $(this).data('music-friend'),
+                            date: $(this).data('date')
                         },
                         success: function (resp) {
                             if (resp.success) {
