--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -14,9 +14,10 @@
                     ses igen på egen hand. Om inte, gör inte det något för timmen har ändå uppfyllt sitt syfte. 
                 </p>
                 <p>
-                    Vi utgår från varje person, så det är du som bestämmer om du definierar dig som ny eller etablerad. <strong>Som ny 
-                    i Sverige</strong> vill du lära dig prata bättre svenska, det spelar ingen roll hur lång eller kort tid du har bott i 
-                    Sverige. Som <strong>etablerad i Sverige</strong> har du svenska som modersmål eller motsvarande, och kan lära ut svenska. 
+                    Vi låter varje person själv bestämma hur han eller hon vill definiera sig, så det är du som bestämmer om du 
+                    definierar dig som ny eller etablerad. Som <strong>ny svensk</strong> vill du lära dig prata bättre svenska, 
+                    det spelar ingen roll hur lång eller kort tid du har bott i Sverige. Som <strong>etablerad svensk</strong> har du 
+                    svenska som modersmål eller motsvarande, har bott i Sverige under lång tid och kan lära ut svenska. 
                 </p>    
                 <p>
                     Så här går det till:
