--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -15,9 +15,11 @@
                         svenska under 1 timmes fika. Det är det vi kallar för en kompisfika. 
                     </p>
                     <p>
-                        Möjliggör vi tillräckligt många möten får nyetablerade svenskar bättre svenskkunskaper, breddat 
-                        socialt nätverk och ökade möjligheter till jobb. Fler vardagsmöten leder också till en ökad 
-                        förståelse för varandra och en berikande tillvaro. För att nämna en bråkdel. 
+                        Vi har verksamhet i nio städer i Sverige; Göteborg, Jönköping, Linköping, Malmö, Stockholm, 
+                        Umeå, Uppsala, Västerås och Örebro. Möjliggör vi tillräckligt många möten får nya 
+                        svenskar bättre svenskkunskaper, breddat socialt nätverk och ökade möjligheter till jobb. 
+                        Fler vardagsmöten leder också till en ökad förståelse för varandra och en berikande tillvaro. 
+                        För att nämna en bråkdel. 
                     </p>
                     <p>
                         “En fika är något som av många ses som centralt i svensk kultur och är associerat med något
