--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -38,14 +38,14 @@
                             Clara Wäppling, ambassadör matchning<br>
                             Gabriella Hernqvist, ambassadör matchning<br>
                             Hanna Magnusson, ambassadör matchning<br>
+                            Hedda Grew, ambassadör Linköping<br>
                             Helena Rewucha, Kompisledare Göteborg<br>
                             Helena Wannberg, Kompisledare Örebro<br>
                             Heydar Sheykhali, ambassadör matchning<br>
-                            Isis Pinon, Kompisledare Malmö<br>
                             Jennifer Silander, ambassadör matchning<br>
                             Jens Östgaard, Kompisledare Göteborg<br>
                             Jon Gotlin, IT<br>
-                            Jonas Ouadih, Kompisledare Malmö<br>
+                            Jonas Ouadih, ambassadör Malmö<br>
                             Louise Koelman, Kompisledare Stockholm<br>
                             Sofia Winroth, Kompisledare Örebro
                         </p>
@@ -60,7 +60,6 @@
                             Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>
                             Umeå: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             Uppsala: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Västerås: <a href="mailto:vasteras@kompisbyran.se">vasteras@kompisbyran.se</a><br>
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
                     
                             Övrigt: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
