--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -11,7 +11,7 @@
                 <h3>Stöd oss!</h3>
                 <p>
                     Vill du som privatperson, företag, kommun eller annan organisation, samarbeta med Kompisbyrån? Idag har 
-                    tusentals fikakompisar från över 79 länder lärt känna varandra över en kompisfika. Många möten har lett 
+                    tusentals fikakompisar från 126 länder lärt känna varandra över en kompisfika. Många möten har lett 
                     till etablering på arbetsmarknaden. Andra till en egen bostad. Och framförallt, har det lett till vänskap 
                     som förenar olika länder, kultur, ålder, språk och erfarenheter. 
                 </p>
