--- a/app/Resources/views/admin/default/index.html.twig
+++ b/app/Resources/views/admin/default/index.html.twig
@@ -1,165 +1,153 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/base.html.twig' %}
 
-{% import _self as macro %}
-
-{% macro connectionRequestItem(connectionRequest, inputName, isChecked, type) %}
-
-    {% if type == 'musicfriend' %}
-        {% set categories = connectionRequest.user.musicCategories %}
-    {% else %}
-        {% set categories = connectionRequest.user.categories %}
-    {% endif %}
-
-
-    <div class="col-md-6 col-sm-6 connection-request-item" data-categories="
-        {%- for category in categories -%}
-            {{ category.id }}{% if not loop.last %},{% endif %}
-        {%- endfor -%}
-    ">
-        <div class="testimonial-content t-one">
-            <h4>
-                <img
-                        style="width:50px"
-                        src="{% if connectionRequest.user.profilePicture -%}
-                            {{ connectionRequest.user.profilePicture }}
-                        {%- else -%}
-                            {{ asset('/images/user.png') }}
-                        {%- endif %}"
-                        alt=""
-                        class="img-responsive img-circle"
-                        /><a
-                        href="{{ path('admin_user', {'id': connectionRequest.user.id}) }}"
-                        data-toggle="popover"
-                        data-trigger="hover"
-                        title="{{ connectionRequest.user.name }}"
-                        data-html="true"
-                        data-content="<strong>Från:</strong> {{ connectionRequest.user.from|country_name }}<br>
-                    <strong>Antal kopplingar:</strong> {{ connectionRequest.user.connections|length }}<br>
-                    <strong>Om:</strong> {{ connectionRequest.user.about }}"
-                        data-placement="bottom"
-                        >{{ connectionRequest.user.name }}</a>
-                <span>{{ connectionRequest.user.gender }}, {{ connectionRequest.user.age }} år</span>
-            </h4>
-            <blockquote class="{% if connectionRequest.user.internalComment %}br-orange{% else %}br-green{% endif %}">
-                <p>
-                    <input name="{{ inputName }}" value="{{ connectionRequest.id }}" type="radio"
-                           {% if isChecked %}checked="checked"{% endif %}
-                           data-name="{{ connectionRequest.user.name }} ({{ connectionRequest.user.gender }}, {{ connectionRequest.user.age }} år)"
-                            >
-                    {% for category in categories %}
-                        {{ category.name }}{% if not loop.last %}, {% endif %}
-                    {% endfor %}
-                    <br>
-                    {{ connectionRequest.createdAt|date('Y-m-d') }}<br>
-                    {{ connectionRequest.user.municipality.name }}<br>
-                    {% if connectionRequest.comment %}
-                        "<em>{{ connectionRequest.comment|nl2br }}</em>"<br>
-                    {% endif %}
-                    {{ connectionRequest.user.email }}
-                </p>
-                {% if connectionRequest.user.internalComment %}
-                    <p>{{ connectionRequest.user.internalComment }}</p>
-                {% endif %}
-                <span class="text-right small">
-                    <a href="{{ path('admin_connectionrequest', {'id': connectionRequest.id}) }}">Ändra</a>
-                </span>
-
-            </blockquote>
+{% block default_content %}
+    <div class="row" style="margin-top: 40px;">
+        <div class="col-md-12">
+            <p>Fika friend: <strong class="learners-num">0 new</strong> &amp; <strong class="fika-established-num">0 established</strong></p>
+            <p>Music friend: <strong class="speakers-num">0 new</strong> &amp; <strong class="music-established-num">0 established</strong></p>
         </div>
     </div>
-{% endmacro %}
-
-{% block body %}
-
-
-    <div class="inner-page testimonial">
-        <div class="container">
-
-            <div class="inner-tab">
-                <ul class="nav nav-tabs">
-                    {% for loopedCity in cities %}
-                        <li{% if loopedCity == city %} class="active"{% endif %}>
-                            <a href="{{ path('admin_start', {'id': loopedCity.id, 'type': type}) }}">{{ loopedCity.name }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-
-
-            <div id="filters">
-                {% for category in categories %}
-                    <label>
-                        <input type="checkbox" name="category" value="{{ category.id }}"> {{ category.name }}
-                    </label>&nbsp;&nbsp;&nbsp;
-                {% endfor %}
-            </div>
-
-            <div class="inner-testimonial row">
-
-                <form method="POST" action="" id="connectionForm">
-                    <div class="col-md-6 col-sm-6">
-                        <h2>Övare</h2>
-                        <div class="row">
-                            {% for connectionRequest in learners %}
-                                {{ macro.connectionRequestItem(connectionRequest, 'learner', loop.first, type) }}
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-6">
-                        <h2 style="clear:both">Lärare</h2>
-                        <div class="row">
-                            {% for connectionRequest in fluentSpeakers %}
-                                {{ macro.connectionRequestItem(connectionRequest, 'fluentSpeaker', loop.first, type) }}
-                            {% endfor %}
-                        </div>
-                    </div>
-
-                    <p style="clear:both">
-                        <input type="submit"
-                               {% if learners|length == 0 or fluentSpeakers|length == 0 %}disabled="disabled"{% endif %}
-                               class="btn btn-default"
-                                >
-                    </p>
-
-                </form>
-            </div>
+    <div class="row" style="margin-top: 40px;">
+        <h1>1. Choose a person to find a match for</h1>
+        <p>The people that have been waiting longest are displayed on top. "Match"-percentage tells you how good of a match the system could find.</p>
+        <table id="match-users" class="table table-bordered" cellspacing="0" width="100%">
+            <thead>
+            <tr>
+                <th id="request_date">{{ 'Date for request'|trans }}</th>
+                <th id="name">{{ 'Name'|trans }}</th>
+                <th id="email">{{ 'Email'|trans }}</th>
+                <th id="category">{{ 'Category'|trans }}</th>
+                <th id="action">{{ 'Action'|trans }}</th>
+            </tr>
+            </thead>
+            <tbody class="persons-list-body"></tbody>
+        </table>
+        <div class="text-center">
+            <a href="#" class="btn btn-lg btn-default show-more-btn disabled" data-next-page="1" style="display: none">{{ 'Show 25 more'|trans }}</a>
         </div>
     </div>
-
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
+
     <script>
-        $(function () {
-            $('#connectionForm').submit(function (e) {
-                if (confirm('Vill du koppla ihop ' + $('input[name=learner]:checked').data('name') + ' och ' + $('input[name=fluentSpeaker]:checked').data('name') + '?')) {
-                    return;
-                }
-                e.preventDefault();
+        $(document).ajaxStart(function(){
+            $('#match-users').block({
+                message: '<strong>Loading...</strong>'
             });
-            $('#filters input').change(function () {
-                var categoryIds = [];
-                $('#filters input:checked').each(function () {
-                    categoryIds.push($(this).val());
-                });
-                $('.connection-request-item').each(function () {
-                    var userCategoryIds = $(this).data('categories').split(',');
-                    var found = 0;
-                    $.each(categoryIds, function (i, categorydId) {
-                        $.each(userCategoryIds, function (ii, userCategoryId) {
-                            if (userCategoryId == categorydId) {
-                                found++;
-                                return false;
-                            }
-                        });
-                    });
-                    if (found == categoryIds.length) {
-                        $(this).show();
-                    } else {
-                        $(this).hide();
+        });
+
+        $(document).ajaxStop(function(){
+            $('#match-users').unblock();
+        });
+
+        $(document).ready(function() {
+
+            var currentCityId = {{ currentCityId }};
+
+            var table = $('#match-users').DataTable({
+                "paging": false,
+                "bInfo": false,
+                "iDisplayLength": 1000,
+                //"bFilter": false,
+                columns:[
+                    {data: 'request_date', width: '15%'},
+                    {data: "name"},
+                    {data: "email"},
+                    {data: "category"},
+                    {data: "action", width: '20%'}
+                ],
+                "createdRow": function ( row, data, index ) {
+                    var ids         = $('td', row).eq(4).text().split('|');
+                    var pendingText = parseInt(ids[2])? 'Remove pending': 'Make pending';
+
+                    $('td', row).eq(4).html('<a href="'+Routing.generate('admin_ajax_connection_request_mark_pending_or_unpending', {id: ids[1]})+'" class="btn btn-warning btn-pending">'+ pendingText +'</a>&nbsp;&nbsp;<a href="'+Routing.generate('admin_match_find', {id: ids[0]})+'" class="btn btn-danger">Find match</a>');
+                }
+            });
+
+            $('.show-more-btn').on( 'click', function (e) {
+                e.preventDefault();
+
+                var $selected   = $('#dropdownMenu1').find('.selection');
+                var cityId      = $selected.val();
+
+                showMoreResults(cityId, $('.show-more-btn').data('next-page'));
+            } );
+
+            $(".city-dropdown li a").click(function(e){
+                e.preventDefault();
+
+                var href    = $(this).attr('href');
+                var text    = $(this).text();
+
+                history.pushState(null, text, href);
+
+                $(this).closest(".dropdown").removeClass('open');
+
+                showMoreResults($(this).data('city-id'), 1);
+            });
+
+            $('#match-users').on('click', 'a.btn-pending', function(e){
+                var $this = $(this);
+
+                $.get($this.attr('href'), function(resp) {
+                    if (resp.success) {
+                        window.location.reload();
                     }
                 });
+
+                return false;
             });
+
+            var showMoreResults = function (id, page) {
+                var $link   = $(".city-dropdown li a#city-"+id);
+                var href    = $link.attr('href');
+                var text    = $link.text();
+                $link.closest(".dropdown").find('.selection').text(text);
+                $link.closest(".dropdown").find('.selection').val(id);
+                $('.stat-city-name').html($link.text());
+
+                if (page == 1) {
+                    table.clear();
+                }
+
+                $.get(Routing.generate('ajax_by_city', {id: id, page: page}), function (resp) {
+                    if (resp.success) {
+                        $('.learners-num').html(resp.newUsers+' new');
+                        $('.speakers-num').html(resp.newMusicFriendUsers+' new');
+                        $('.fika-established-num').html(resp.establishedUsers+' established');
+                        $('.music-established-num').html(resp.establishedMusicFriendUsers+' established');
+                        if (resp.next) {
+                            $('.show-more-btn').data('next-page', resp.next);
+                            $('.show-more-btn').removeClass('disabled');
+                        } else {
+                            $('.show-more-btn').addClass('disabled', 'disabled');
+                        }
+
+                        table.rows.add(resp.results).draw();
+                    }
+                });
+            }
+
+            if (history.pushState) {
+                window.addEventListener("popstate", function(e) {
+                    var cityId = window.location.hash.substring(1);
+                    showMoreResults(cityId, 1);
+                });
+            } else {
+                window.attachEvent("onhashchange", function(e) {
+                    var cityId = window.location.hash.substring(1);
+                    showMoreResults(cityId, 1);
+                });
+            }
+
+            if (window.location.hash.length) {
+                var cityId = window.location.hash.substring(1);
+                showMoreResults(cityId, 1);
+            } else if (currentCityId) {
+                $(".city-dropdown li a#city-"+currentCityId).trigger('click');
+            }
         });
     </script>
 {% endblock %}
