--- a/app/Resources/views/admin/default/inspection.html.twig
+++ b/app/Resources/views/admin/default/inspection.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin2/default/base.html.twig' %}
+{% extends 'admin/default/base.html.twig' %}
 
 {% block default_content %}
     <div class="row" style="margin-top: 40px; margin-bottom: 20px;">
