--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -4,68 +4,18 @@
 
     <div class="inner-page about-us">
         <div class="container">
-            <h2><strong>Om Kompisbyrån</strong></h2>
+            <h2><strong>{{ 'page.about.header'|trans }}</strong></h2>
             <div class="row">
                 <div class="col-md-8 col-sm-8">
-                    <p>
-                        Kompisbyrån är en ideell organisation som digitalt skapar kontakt mellan nya och etablerade 
-                        svenskar med liknande intressen. Kompisbyrån startades 2014 av Emma Hammar och Cecilia Holmgren 
-                        med en vision om att öka gemenskapen i samhället genom att förenkla förutsättningar till fler 
-                        vardagsmöten mellan människor med olika bakgrund, erfarenhet och kultur. Syftet är att prata 
-                        svenska under 1 timmes fika. Det är det vi kallar för en kompisfika. 
-                    </p>
-                    <p>
-                        Vi har verksamhet i nio städer i Sverige; Göteborg, Jönköping, Linköping, Malmö, Stockholm, 
-                        Umeå, Uppsala, Västerås och Örebro. Möjliggör vi tillräckligt många möten får nya 
-                        svenskar bättre svenskkunskaper, breddat socialt nätverk och ökade möjligheter till jobb. 
-                        Fler vardagsmöten leder också till en ökad förståelse för varandra och en berikande tillvaro. 
-                        För att nämna en bråkdel. 
-                    </p>
-                    <p>
-                        “En fika är något som av många ses som centralt i svensk kultur och är associerat med något
-                        lättsamt, avslappnat och roligt. Därför tycker vi att det är väldigt passande att träffas och 
-                        öva svenska över just en fika.” - Emma Hammar och Cecilia Holmgren, grundare av Kompisbyrån  
-                    </p>
+                    {{ 'page.about.text'|trans|raw }}
                     <img src="/images/Kompis2.JPG" class="img-responsive" alt="Vi som jobbar med Kompisbyrån" />
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="well br-white border-orange black">
-                        <h4>Vi som jobbar med Kompisbyrån</h4>
-                        <p>
-                             Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
-                            Cecilia Holmgren, grundare
-                            <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Clara Wäppling, ambassadör matchning<br>
-                            Gabriella Hernqvist, ambassadör matchning<br>
-                            Hanna Magnusson, ambassadör matchning<br>
-                            Hedda Grew, ambassadör Linköping<br>
-                            Helena Rewucha, Kompisledare Göteborg<br>
-                            Helena Wannberg, Kompisledare Örebro<br>
-                            Heydar Sheykhali, ambassadör matchning<br>
-                            Jennifer Silander, ambassadör matchning<br>
-                            Jens Östgaard, Kompisledare Göteborg<br>
-                            Jon Gotlin, IT<br>
-                            Jonas Ouadih, ambassadör Malmö<br>
-                            Louise Koelman, Kompisledare Stockholm<br>
-                            Sofia Winroth, Kompisledare Örebro
-                        </p>
+                        {{ 'page.about.well1'|trans|raw }}
                     </div>
                     <div class="well br-white border-orange black">
-                        <p>
-                            Frågor om matchningen?<br>
-                            Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
-                            Jönköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br> 
-                            Linköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
-                            Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>
-                            Umeå: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Uppsala: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
-                    
-                            Övrigt: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
-
-                            Frågor om samarbete, rekrytering eller press: kontakta <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
-                        </p>
+                        {{ 'page.about.well2'|trans|raw }}
                     </div>
                 </div>
             </div>
