--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -4,43 +4,15 @@
 
 <div class="inner-page">
     <div class="container">
-        <h2><strong>Bli Fikakompis</strong></h2>
+        <h2><strong>{{ 'page.how_it_works.header'|trans }}</strong></h2>
         <div class="row">
             <div class="col-md-8 col-sm-8">
-                <p>
-                    Kompisbyrån skapar kontakt mellan två nya fikakompisar med liknande intressen. Syftet är att prata svenska över 
-                    en fika. En person är ny i Sverige och en person har bott i Sverige länge. Ni träffas på ett kafé i cirka 1 
-                    timme och pratar svenska. Det är det vi kallar för en “kompisfika”. Om ni tycker det är roligt får ni gärna 
-                    ses igen på egen hand. Om inte, gör inte det något för timmen har ändå uppfyllt sitt syfte. 
-                </p>
-                <p>
-                    Vi låter varje person själv bestämma hur han eller hon vill definiera sig, så det är du som bestämmer om du 
-                    definierar dig som ny eller etablerad. Som <strong>ny svensk</strong> vill du lära dig prata bättre svenska, 
-                    det spelar ingen roll hur lång eller kort tid du har bott i Sverige. Som <strong>etablerad svensk</strong> har du 
-                    svenska som modersmål eller motsvarande, har bott i Sverige under lång tid och kan lära ut svenska. 
-                </p>    
-                <p>
-                    Så här går det till:
-                </p>
-                <p>    
-                    1. Du registrerar dig. Tryck på "Bli Fikakompis"-knappen och följ instruktionerna, det är gratis att registrera sig. 
-                    Du måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro.  
-                </p>
-                <p>
-                    2. Matchning. Vi skickar ett email till dig när vi har hittat en fikakompis som har liknande intressen som du har. 
-                </p>
-                <p>
-                    3. Bestäm ett datum. Du skickar ett email till din fikakompis inom 7 dagar och bestämmer datum, tid och plats. 
-                </p>
-                <p>
-                    4. Mötet. Ni träffas för att prata svenska på ett kafé eller annat offentligt ställe i cirka 1 timme. 
-                </p>
+                {{ 'page.how_it_works.text'|trans|raw }}
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="well br-white border-orange black">
                     <p>
-                        Vi förmedlar första kontakten till en fikakompis som du träffar 1 gång (om ni inte kommer överens om annat). 
-                        Vill du träffa en ny fikakompis, loggar du in och gör en ny förfrågan. 
+                        {{ 'page.how_it_works.well'|trans }}
                     </p>
                 </div>
             </div>
