--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -7,59 +7,8 @@
         <div class="row">
             <div class="col-md-1 col-sm-0"></div>
             <div class="col-md-7 col-sm-12">
-                <h2><strong>Stöd oss</strong></h2>
-                <h3>Stöd oss!</h3>
-                <p>
-                    Vill du som privatperson, företag, kommun eller annan organisation, samarbeta med Kompisbyrån? Idag har 
-                    tusentals fikakompisar från 126 länder lärt känna varandra över en kompisfika. Många möten har lett 
-                    till etablering på arbetsmarknaden. Andra till en egen bostad. Och framförallt, har det lett till vänskap 
-                    som förenar olika länder, kultur, ålder, språk och erfarenheter. 
-                </p>
-                <p>
-                    Vi är helt finansierade genom samarbeten så det är genom dem som vi kan hjälpa alla tusentals människor 
-                    som vill skapa ett socialt sammanhang i samhället. Följ med oss på vår resa till ett öppnare samhälle 
-                    där alla kan känna sig delaktiga och välkomna. 
-                </p>
-                <p> 
-                    <strong>Din gåva är väldigt värdefull för oss, oavsett hur mycket eller lite du väljer att skänka:</strong>
-                </p>
-                <p> 
-                    <strong>Kompisbyråns Swishnr: 1236 809 602 eller BG-konto 386-3982</strong>
-                </p>
-                <p> 
-                    Vi vill gärna ge dig ett personligt gåvobevis som tack - maila kontakt@kompisbyran.se så skickar vi över det! 
-                </p>
-                <p>
-                    Vi berättar mer än gärna om hur du kan stötta Kompisbyrån på olika vis - kontakta emma@kompisbyran.se eller cecilia@kompisbyran.se. 
-                </p>
-                <p>
-                    Stort tack för att du vill vara med och göra skillnad.
-                </p>    
-
-                <h3>Tack till...</h3>
-                <p>
-                    <strong>Svenska Postkodstiftelsen</strong> som stöttar Kompisbyrån. Tack vare detta
-                    bidrag har vi fått möjlighet att effektivisera vårt arbete genom att bl.a. utveckling av datasystem och hemsida.
-                </p>
-                <p>
-                    <strong>Sigtunastiftelsen</strong> som 2015 belönade Kompisbyrån med <a
-                        href="http://www.sigtunastiftelsen.se/kompisbyran-far-abrahams-barns-pris-2015/"
-                        target="_blank"
-                    >Abrahams Barns pris</a>, med motiveringen att Kompisbyrån skapar förutsättningar 
-                    för mötesplatser i vardagen där ett kulturellt utbyte kan ske mellan personer som
-                    annars inte skulle ha träffats. “Vi vill därför uppmuntra initiativ som Kompisbyrån eftersom de,
-                    liksom Abrahams Barn, önskar delta i byggandet av ett inkluderande samhälle”, säger Elisabet
-                    Mattizon Armgard, programsekreterare för Abrahams Barn.
-                </p>
-                <p>
-                    <a
-                        href="http://www.lernia.se/kompisbyran/)"
-                        target="_blank"
-                    >Lernia</a> som stöttar Kompisbyråns arbete med att göra det enklare för människor med liknande intressen att 
-                    mötas och träffa nya vänner i vardagen. I och med detta har vi möjlighet att nå ut till fler som 
-                    vill träffa nya kompisar. 
-                </p>
-
+                <h2><strong>{{ 'page.work_with_us.header'|trans }}</strong></h2>
+                {{ 'page.work_with_us.text'|trans|raw }}
             </div>
 
             <div class="col-md-4 col-sm-12">
