--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -42,6 +42,13 @@
     <link href="/css/custom.css" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    <style type="text/css">
+        {% if app.request.locale == 'ar' %}
+            body {
+                direction: rtl;
+            }
+        {% endif %}
+    </style>
     {% block stylesheets %}{% endblock %}
 </head>
 
