--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -9,16 +9,18 @@
                     <div class="col-md-6 col-sm-6">
                         <!-- Sign In Area -->
                         <div class="sign-in">
-                            <h3><i class="fa fa-user red"></i> &nbsp;Logga in</h3>
+                            <h3><i class="fa fa-user red"></i> &nbsp;{{ 'register.login.header'|trans }}</h3>
                             <!-- Sign in Form Start -->
                             {{ render(controller('FOSUserBundle:Security:login')) }}
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                         <p>
-                            Om du redan har skapat ett användarkonto, loggar du in här genom att fylla i din
-                            e-postadress och lösenord. Är det första gången du vill fika, trycker du
-                            <a href="{{ path('fos_user_registration_register') }}">här</a>.
+                            {{ 'login.text'|trans({
+                                '%link_start%': '<a href="' ~ path('fos_user_registration_register') ~ '">',
+                                '%link_end%': '</a>'
+                            })|raw }}
+
                         </p>
                     </div>
                 </div>
