--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -127,6 +127,7 @@
 <div class="language-choice">
     <a href="{{ app.request.pathinfo }}?_locale=sv">Svenska</a>
     <a href="{{ app.request.pathinfo }}?_locale=en">English</a>
+    <a href="{{ app.request.pathinfo }}?_locale=ar">العربية</a>
 </div>
 
 <!-- Menu Bar End -->
