User priviledge fix

--- a/app/Resources/views/admin2/user/priviledge.html.twig
+++ b/app/Resources/views/admin2/user/priviledge.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin2/default/base.html.twig' %}
+{% extends 'admin/default/base.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
