--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -46,7 +46,7 @@
 
                         <div class="form-group">
                             {{ form_label(form.wantToLearn) }}
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 checkableList">
                                 {{ form_widget(form.wantToLearn) }}
                                 {{ form_errors(form.wantToLearn) }}
                             </div>
@@ -54,7 +54,7 @@
 
                         <div class="form-group">
                             {{ form_label(form.musicFriend) }}
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 checkableList">
                                 {{ form_widget(form.musicFriend) }}
                                 {{ form_errors(form.musicFriend) }}
                             </div>
@@ -62,11 +62,11 @@
 
                         <div class="form-group">
                             {{ form_label(form.categories) }}
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 checkableList">
                                 {{ form_widget(form.categories) }}
                                 {{ form_errors(form.categories) }}
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 checkableList">
                                 {{ form_widget(form.musicCategories) }}
                                 {{ form_errors(form.musicCategories) }}
                             </div>
@@ -91,7 +91,7 @@
 
                         <div class="form-group">
                             {{ form_label(form.gender) }}
-                            <div class="col-sm-2">
+                            <div class="col-sm-2 checkableList">
                                 {{ form_widget(form.gender) }}
                                 {{ form_errors(form.gender) }}
                             </div>
@@ -113,9 +113,9 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group ">
                             {{ form_label(form.hasChildren) }}
-                            <div class="col-sm-4">
+                            <div class="col-sm-4 checkableList">
                                 {{ form_widget(form.hasChildren) }}
                                 {{ form_errors(form.hasChildren) }}
                             </div>
